--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.daniel.fitkeeper.WorkoutActivity">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="0dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:paddingTop="0dp"
+        android:background="@color/backgroundOrange"
+        tools:context="com.example.daniel.fitkeeper.WorkoutActivity">
 
-</RelativeLayout>
+
+        <Spinner
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/snipperWeek"
+            android:layout_below="@+id/view"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="38dp"
+            android:layout_marginLeft="30dp"/>
+
+
+
+        <ImageButton
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:id="@+id/imageButton3"
+            android:src="@drawable/ic_back_button"
+            android:layout_marginBottom="30dp"
+            android:background="@color/mainOrange"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/editText7" />
+
+
+    </RelativeLayout>
