--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -138,5 +138,15 @@
         android:background="@color/mainOrange"
         android:layout_alignParentBottom="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text=""
+        android:id="@+id/currentMonthTxt"
+        android:layout_alignStart="@+id/nameTxt"
+        android:layout_below="@+id/spinner"
+        android:layout_above="@+id/nameEdtTxt" />
+
 
 </RelativeLayout>
