--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -38,7 +38,7 @@
     <Spinner
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:id="@+id/spinner"
+        android:id="@+id/spinnerWeek"
         android:layout_below="@+id/view"
         android:layout_alignParentStart="true"
         android:layout_marginTop="38dp"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="240dp"
-        android:background="@color/white"
+        android:background="#FFFFFF"
         android:id="@+id/table">
 
         <TableRow
