--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -39,6 +39,11 @@
         android:textSize="40sp"/>
         -->
 
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
@@ -60,7 +65,7 @@
         android:id="@+id/btnHome"
         android:layout_below="@+id/AppName"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="95dp" />
+        android:layout_marginTop="55dp" />
 
     <Button
         android:layout_width="200dp"
@@ -104,5 +109,7 @@
         COLOCAR BOTAO DE DESLOGAR DENTRO DAS CONFIGURAÇÕES!-->
 
     </RelativeLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
