--- a/app/src/main/res/layout-land/activity_info.xml
+++ b/app/src/main/res/layout-land/activity_info.xml
@@ -27,6 +27,15 @@
     </android.support.v7.widget.Toolbar>
     -->
 
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -148,9 +157,12 @@
         android:layout_height="50dp"
         android:id="@+id/backBtn"
         android:src="@drawable/ic_back_button"
-        android:layout_marginBottom="30dp"
+        android:layout_below="@+id/imcEdtTxt"
         android:background="@color/mainOrange"
         android:layout_alignParentBottom="true" />
+
+            </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
