--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -10,6 +10,11 @@
     android:background="@color/backgroundOrange"
     tools:context="com.example.daniel.fitkeeper.LoginActivity">
 
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -24,8 +29,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:fontFamily="sans-serif-medium"
-        android:textSize="70sp"
-        android:id="@+id/screenTxt"/>
+        android:textSize="70sp"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -33,7 +37,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/screenTxt">
+        android:layout_marginTop="50dp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -50,7 +54,7 @@
                 android:id="@+id/editTextMail"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/border"
-                android:layout_marginTop="180dp"/>
+                android:layout_marginTop="150dp"/>
 
             <EditText
                 android:layout_width="298dp"
@@ -108,4 +112,6 @@
         android:layout_marginTop="37dp"
         android:backgroundTint="@color/black"/>
         -->
+
+    </ScrollView>
 </RelativeLayout>
