--- a/app/src/main/res/layout-land/activity_settings.xml
+++ b/app/src/main/res/layout-land/activity_settings.xml
@@ -27,6 +27,16 @@
     </android.support.v7.widget.Toolbar>
     -->
 
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -91,9 +101,8 @@
         android:layout_height="wrap_content"
         android:text="@string/save_button_name"
         android:id="@+id/saveBtn"
-        android:layout_above="@+id/backBtn"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="49dp" />
+        android:layout_below="@id/rptPassEdtText"
+        android:layout_alignParentEnd="true"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -101,8 +110,7 @@
         android:layout_height="wrap_content"
         android:text="@string/logout_button_name"
         android:id="@+id/logoutBtn"
-        android:layout_alignTop="@+id/saveBtn"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@id/rptPassEdtText"/>
 
     <ImageButton
         android:layout_width="70dp"
@@ -110,8 +118,10 @@
         android:id="@+id/backBtn"
         android:src="@drawable/ic_back_button"
         android:background="@color/mainOrange"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/logoutBtn"/>
+
+            </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
