--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -81,8 +81,8 @@
         android:layout_marginTop="33dp" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/settingsButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
