--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -92,7 +92,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_below="@+id/btnSubscription"
         android:src="@drawable/ic_settings_icon"
         android:background="@color/mainOrange"/>
 
