--- a/app/src/main/res/layout-large/activity_workout.xml
+++ b/app/src/main/res/layout-large/activity_workout.xml
@@ -104,7 +104,7 @@
                 android:textSize="20dp" />
         </TableRow>
 
-        <TableRow>
+        <TableRow android:id="@+id/tablerow1">
 
             <TextView
                 android:id="@+id/exercise1"
@@ -148,7 +148,7 @@
                 android:textSize="20dp"/>
         </TableRow>
 
-        <TableRow>
+        <TableRow android:id="@+id/tablerow2">
 
             <TextView
                 android:id="@+id/exercise2"
@@ -192,7 +192,7 @@
                 android:textSize="20dp"/>
         </TableRow>
 
-        <TableRow>
+        <TableRow android:id="@+id/tablerow3">
 
             <TextView
                 android:id="@+id/exercise3"
@@ -235,7 +235,7 @@
                 android:textSize="20dp"/>
         </TableRow>
 
-        <TableRow>
+        <TableRow android:id="@+id/tablerow4">
 
             <TextView
                 android:id="@+id/exercise4"
