--- a/app/src/main/res/layout-large-land/activity_subscription.xml
+++ b/app/src/main/res/layout-large-land/activity_subscription.xml
@@ -27,6 +27,14 @@
     </android.support.v7.widget.Toolbar>
     -->
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
     <TextView
         android:id="@id/screenTxt"
         android:layout_width="wrap_content"
@@ -36,66 +44,120 @@
         android:layout_gravity="center_horizontal"
         android:text="@string/subscription_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="60sp" />
+        android:textSize="90sp" />
 
     <TextView
         android:id="@+id/membershipTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/screenTxt"
-        android:layout_marginTop="54dp"
-        android:layout_toEndOf="@+id/backBtn"
+        android:layout_marginTop="154dp"
         android:text="@string/membership_plan_name"
-        android:textSize="25sp" />
-
-    <TextView
-        android:id="@+id/membershipEdtTxt"
-        android:layout_width="350dp"
-        android:layout_height="30dp"
-        android:layout_alignStart="@+id/membershipTxt"
-        android:layout_below="@+id/membershipTxt"
-        android:background="@drawable/border"
-        android:padding="5dp" />
+        android:textSize="35sp"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/membershipLstDayTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/membershipEdtTxt"
-        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:text="@string/membership_last_day_name"
-        android:textSize="25sp" />
+        android:textSize="35sp"
+        android:layout_below="@+id/membershipEdtTxt"
+        android:layout_marginTop="40dp"/>
+
+    <TextView
+        android:id="@+id/membershipEdtTxt"
+        android:layout_width="350dp"
+        android:layout_height="30dp"
+        android:background="@drawable/border"
+        android:padding="5dp"
+        android:layout_below="@+id/membershipTxt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:id="@+id/membershipLstDayEdtTxt"
         android:layout_width="350dp"
         android:layout_height="30dp"
-        android:layout_alignStart="@+id/membershipLstDayTxt"
-        android:layout_below="@+id/membershipLstDayTxt"
         android:background="@drawable/border"
         android:ems="10"
         android:inputType="date"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:layout_below="@+id/membershipLstDayTxt"
+        android:layout_alignStart="@+id/membershipEdtTxt"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/renewMbshpLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/membership_renew_button_name"
+        android:textSize="35sp"
+        android:layout_below="@+id/membershipLstDayEdtTxt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"/>
+
+    <Spinner
+        android:id="@+id/payment_spinner"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/renewMbshpLabel"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/payment_spinner"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/card_label"
+        android:id="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:textSize="25sp"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/totalTxtLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextCard"
+        android:layout_centerHorizontal="true"
+        android:text="@string/default_price"
+        android:textSize="25sp"
+        android:layout_marginTop="10dp"/>
+
+            <EditText
+        android:id="@+id/editTextCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number"
+        android:layout_below="@+id/textView2"
+        android:layout_alignStart="@+id/textView2" />
 
     <Button
         android:id="@+id/renewBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/membershipLstDayEdtTxt"
-        android:layout_below="@+id/membershipLstDayEdtTxt"
-        android:layout_marginTop="43dp"
         android:background="@drawable/button_bg_rounded_corners"
         android:text="@string/membership_renew_button_name"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:layout_below="@+id/totalTxtLabel"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"/>
 
-    <ImageButton
-        android:id="@+id/backBtn"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/button_bg_rounded_corners"
-        android:src="@drawable/ic_back_button" />
+            <ImageButton
+                android:id="@+id/backBtn"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
+                android:background="@drawable/button_bg_rounded_corners"
+                android:src="@drawable/ic_back_button"
+                android:layout_alignTop="@+id/renewBtn"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="59dp" />
+
+        </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
