--- a/app/src/main/res/layout-large/activity_workout.xml
+++ b/app/src/main/res/layout-large/activity_workout.xml
@@ -47,8 +47,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/screenTxt"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="188dp"
-        android:visibility="invisible"/>
+        android:layout_marginTop="188dp" />
 
     <TextView
         android:id="@+id/currentDayTxt"
